--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -20,7 +20,7 @@
 				<div class="row x-gap-15 items-center justify-between">
 					<div class="col-auto">
 						<!-- Currency Dropdown -->
-						<select id="currency-selector" class="text-14 text-white" onchange="changeCurrency()" style="background: white; color: #2c1f12;">
+						<select id="currency-selector" class="text-14 text-white" onchange="changeCurrency()" style="background: white; color: #330000;">
 						    <option value="USD" {% if selected_currency == 'USD' %}selected{% endif %}>USD</option>
 						    <option value="RWF" {% if selected_currency == 'RWF' %}selected{% endif %}>RWF</option>
 						</select>
@@ -38,7 +38,7 @@
     }
 </script>
 
-<header data-add-bg="bg-dark-1" class="header mt-40 -type-9 js-header" data-x="header" data-x-toggle="is-menu-opened" style="background: #2c1f12 !important;">
+<header data-add-bg="bg-dark-1" class="header mt-40 -type-9 js-header" data-x="header" data-x-toggle="is-menu-opened" style="background: #330000 !important;">
 	<div data-anim="fade" class="header__container container">
 		<div class="row justify-between items-center">
 			<div class="col-auto">
