--- a/templates/success.html
+++ b/templates/success.html
@@ -75,8 +75,8 @@
                                                 <td>{{ booking.room }}</td>
                                                 <td>{{ booking.payment_amount|intcomma }} {{ booking.currency }}</td>
                                                 <td>0</td>
-                                                <td>{{ booking.checkInDate|date:"F j, Y, g:i a" }}</td>
-                                                <td>{{ booking.checkOutDate|date:"F j, Y, g:i a" }}</td>
+                                                <td>{{ booking.checkInDate|date:"F j, Y" }}</td>
+                                                <td>{{ booking.checkOutDate|date:"F j, Y" }}</td>
                                                 <td>{{ booking.payment_amount|intcomma }} {{ booking.currency }}</td>
                                             </tr>
                                             <tr>
