Add restaurant route

--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -68,6 +68,9 @@
                                         <a href="{% url 'base:rooms' %}">Rooms</a>
                                     </li>
                                     <li>
+                                        <a href="{% url 'base:restaurant' %}">Restaurant</a>
+                                    </li>
+                                    <li>
                                         <a href="{% url 'base:blogs' %}">Blogs</a>
                                     </li>
                                     <li>
@@ -79,9 +82,9 @@
 							</div>
 						</div>
 					</div>
-					<div class="d-flex items-center ml-24 is-menu-opened-hide md:d-none">
+					{% comment %} <div class="d-flex items-center ml-24 is-menu-opened-hide md:d-none">
 						<a href="#" class="text-26 xl:text-20 text-white icon-search"></a>
-					</div>
+					</div> {% endcomment %}
 					<div class="d-none xl:d-flex x-gap-20 items-center pl-20 text-white" data-x="header-mobile-icons" data-x-toggle="text-white">
 						<div>
 							<a href="{% url 'base:home' %}" class="d-flex items-center icon-user text-inherit text-22"></a>
