--- a/templates/success.html
+++ b/templates/success.html
@@ -98,6 +98,9 @@
                                     <a href="#" class="text-14">{{ settings.email }}</a>
                                 </div>
                                 <div class="col-auto">
+                                    <a href="#" class="text-14">{{ settings.second_email }}</a>
+                                </div>
+                                <div class="col-auto">
                                     <a href="#" class="text-14">{{ settings.contact_number }}</a>
                                 </div>
                             </div>
