--- a/templates/restaurant/index.html
+++ b/templates/restaurant/index.html
@@ -14,28 +14,22 @@
             <div class="row justify-center text-center">
                 <div class="col-auto">
                     <div class="sectionTitle -md">
-                        <h2 class="sectionTitle__title">Our Rooms</h2>
+                        <h2 class="sectionTitle__title">Our Food</h2>
                     </div>
                 </div>
             </div>
             <div class="row y-gap-30 pt-40 sm:pt-20">
                 {% for food in restaurant %}
-                    <div data-anim-child="slide-up delay-3" class="col-lg-3 col-sm-6">
-                        <a href="{% url 'base:getRoom' room.slug %}" class="cruiseCard -type-1 rounded-4">
+                    <div class="col-lg-3 col-sm-6">
+                        <a href="#" class="cruiseCard -type-1 rounded-4">
                             <div class="cruiseCard__image">
                                 <div class="cardImage ratio ratio-6:5">
                                     <div class="cardImage__content">
                                         <div class="cardImage-slider rounded-4 overflow-hidden js-cardImage-slider">
                                             <div class="swiper-wrapper">
                                                 <div class="swiper-slide">
-                                                    <img class="col-12" src="{{ room.image.url }}" alt="{{ room.name }}">
+                                                    <img class="col-12" src="{{ food.image.url }}" alt="{{ food.name }}">
                                                 </div>
-
-                                                {% for image in room.images.all %}
-                                                    <div class="swiper-slide">
-                                                        <img class="col-12" src="{{ image.image.url }}" alt="{{ room.name }}">
-                                                    </div>
-                                                {% endfor %}
                                             </div>
                                         </div>
                                     </div>
@@ -47,47 +41,18 @@
                                 </div>
                             </div>
                             <div class="cruiseCard__content mt-10">
-                                <div class="text-14 lh-14 text-light-1 mb-5">{{ settings.address }}</div>
                                 <h4 class="cruiseCard__title text-dark-1 text-18 lh-16 fw-500">
-                                    <span>{{ room.name }}</span>
+                                    <span>{{ food.name }}</span>
                                 </h4>
-                                <p class="text-light-1 lh-14 text-14 mt-5">
-                                    <div class="row x-gap-10 y-gap-10 pt-6">
-                                        {% for amenity in room.amenities.all %}
-                                            <div class="col-auto">
-                                                <div class="border-light rounded-100 py-5 px-20 text-10 lh-14">{{ amenity.name }}</div>
-                                            </div>
-                                        {% endfor %}
-                                    </div>
-                                </p>
-                                {% comment %} <div class="row y-gap-10 justify-between items-center">
-                                    <div class="col-auto">
-                                        <div class="text-14 text-dark-1 fw-500">Capacity</div>
-                                        <div class="text-14 text-light-1">{{ room.capacity }} People</div>
-                                    </div>
-                                    <div class="col-auto">
-                                        <div class="text-14 text-dark-1 fw-500">Size</div>
-                                        <div class="text-14 text-light-1">{{ room.size }}</div>
-                                    </div>
-                                </div> {% endcomment %}
                                 <div class="row y-gap-20 justify-between items-center pt-5">
-                                    <div class="col-auto">
-                                        <div class="d-flex items-center">
-                                            <div class="icon-star text-yellow-1 text-10 mr-5"></div>
-                                            <div class="text-14 text-light-1">
-                                                <span class="text-15 text-dark-1 fw-500">{{ room.overall_rating }}</span>
-                                                {{ room.total_reviews }} reviews
-                                            </div>
-                                        </div>
-                                    </div>
                                     <div class="col-auto">
                                         <div class="text-14 text-light-1">
                                             Price
                                             <span class="text-16 fw-500 text-dark-1">
                                                 {% if selected_currency == 'USD' %}
-                                                    ${{ room.price_usd|intcomma }}
+                                                    ${{ food.price_usd|intcomma }}
                                                 {% else %}
-                                                    {{ room.price_rwf|intcomma }} RWF
+                                                    {{ food.price_rwf|intcomma }} RWF
                                                 {% endif %}
                                             </span>
                                         </div>
