--- a/templates/layouts/app.html
+++ b/templates/layouts/app.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{% static 'css/vendors.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6967969838365445" crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-6967969838365445">
     <title>B&B Mountain View | {% block title %} Home {% endblock %}</title>
 </head>
 <body>
