--- a/templates/inc/footer.html
+++ b/templates/inc/footer.html
@@ -82,7 +82,7 @@
                     <div class="row x-gap-30 y-gap-10">
                         <div class="col-auto">
                             <div class="d-flex items-center">
-                            © 2024 B&B Mountain View.
+                                © 2025 B&B Mountain View. Developed by <a href="">NE<span style="color: red">X</span>CODE</a>
                             </div>
                         </div>
 
