--- a/templates/layouts/app.html
+++ b/templates/layouts/app.html
@@ -39,9 +39,9 @@
         </script>
     {% endif %}
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6967969838365445" crossorigin="anonymous"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAz77U5XQuEME6TpftaMdX0bBelQxXRlM"></script>
     <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
-
     <script src="{% static 'js/vendors.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
 </body>
