--- a/templates/inc/footer.html
+++ b/templates/inc/footer.html
@@ -82,7 +82,7 @@
                     <div class="row x-gap-30 y-gap-10">
                         <div class="col-auto">
                             <div class="d-flex items-center">
-                                <p>© 2025 B&B Mountain View. Developed by <a href='https://www.nexcodes.dev/' target='_blank'>NE<span style={{ color: 'red', fontWeight: 'bold' }}>X</span>CODE</a></p>
+                                <p>© 2025 B&B Mountain View. Developed by <a href='https://www.nexcodes.dev/' target='_blank'>NE<span style="color:red; font-weight: bold">X</span>CODE</a></p>
                             </div>
                         </div>
 
