--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -20,10 +20,10 @@
 				<div class="row x-gap-15 items-center justify-between">
 					<div class="col-auto">
 						<!-- Currency Dropdown -->
-						<select id="currency-selector" class="text-14 text-white" onchange="changeCurrency()" style="background: white; color: #330000;">
+						<!-- <select id="currency-selector" class="text-14 text-white" onchange="changeCurrency()" style="background: white; color: #330000;">
 						    <option value="USD" {% if selected_currency == 'USD' %}selected{% endif %}>USD</option>
 						    <option value="RWF" {% if selected_currency == 'RWF' %}selected{% endif %}>RWF</option>
-						</select>
+						</select> -->
 					</div>
 				</div>
 			</div>
