Fix template to use separate review_form context variable

--- a/templates/rooms/show.html
+++ b/templates/rooms/show.html
@@ -382,49 +382,49 @@
                         <div class="row y-gap-30 pt-30">
                             <div class="col-xl-4">
                                 <div class="text-15 lh-1 fw-500">Location</div>
-                                {{ form.location }}
+                                {{ review_form.location }}
                             </div>
                             <div class="col-xl-4">
                                 <div class="text-15 lh-1 fw-500">Staff</div>
-                                {{ form.staff }}
+                                {{ review_form.staff }}
                             </div>
                             <div class="col-xl-4">
                                 <div class="text-15 lh-1 fw-500">Cleanliness</div>
-                                {{ form.cleanliness }}
+                                {{ review_form.cleanliness }}
                             </div>
                             <div class="col-xl-4">
                                 <div class="text-15 lh-1 fw-500">Value For Money</div>
-                                {{ form.value_for_money }}
+                                {{ review_form.value_for_money }}
                             </div>
                             <div class="col-xl-4">
                                 <div class="text-15 lh-1 fw-500">Comfort</div>
-                                {{ form.comfort }}
+                                {{ review_form.comfort }}
                             </div>
                             <div class="col-xl-4">
                                 <div class="text-15 lh-1 fw-500">Facilities</div>
-                                {{ form.facilities }}
+                                {{ review_form.facilities }}
                             </div>
                             <div class="col-xl-4">
                                 <div class="text-15 lh-1 fw-500">Free WIFI</div>
-                                {{ form.free_wifi }}
+                                {{ review_form.free_wifi }}
                             </div>
                         </div>
                         <div class="row y-gap-30 pt-20">
                             <div class="col-xl-6">
                                 <div class="form-input ">
-                                    {{ form.name }}
+                                    {{ review_form.name }}
                                     <label class="lh-1 text-16 text-light-1">Name</label>
                                 </div>
                             </div>
                             <div class="col-xl-6">
                                 <div class="form-input ">
-                                    {{ form.email }}
+                                    {{ review_form.email }}
                                     <label class="lh-1 text-16 text-light-1">Email</label>
                                 </div>
                             </div>
                             <!-- <div class="col-12">
                                 <div class="form-input ">
-                                    {{ form.comment }}
+                                    {{ review_form.comment }}
                                     <label class="lh-1 text-16 text-light-1">Write Your Comment</label>
                                 </div>
                             </div> -->
