--- a/templates/emails/review_thank_you.html
+++ b/templates/emails/review_thank_you.html
@@ -45,7 +45,7 @@
 
         <p>If you ever need a place to stay again, B&B Mountain View is always here to welcome you back with open arms!</p>
 
-        <a href="{{ settings.site_url }}" class="btn">Visit Our Website</a>
+        <a href="https://bnbmountainview.com" class="btn">Visit Our Website</a>
 
         <div class="footer">
             &copy; B&& Mountain View<br>
