--- a/templates/inc/footer.html
+++ b/templates/inc/footer.html
@@ -82,7 +82,7 @@
                     <div class="row x-gap-30 y-gap-10">
                         <div class="col-auto">
                             <div class="d-flex items-center">
-                                <p>© 2025 B&B Mountain View. Developed by <a href='https://www.nexcodes.dev/' target='_blank'>NE<span style="color:red; font-weight: bold">X</span>CODE</a></p>
+                                <p>© 2025 B&B Mountain View.</p>
                             </div>
                         </div>
 
@@ -100,15 +100,7 @@
                     <div class="row y-gap-10 items-center">
                         <div class="col-auto">
                             <div class="d-flex items-center">
-                                <button class="d-flex items-center text-14 fw-500 text-white mr-10">
-                                    <i class="icon-globe text-16 mr-10"></i>
-                                    <span class="underline">English (US)</span>
-                                </button>
-
-                                <button class="d-flex items-center text-14 fw-500 text-white">
-                                    <i class="icon-usd text-16 mr-10"></i>
-                                    <span class="underline">USD</span>
-                                </button>
+                                 Developed by <a href='https://www.nexcodes.dev/' target='_blank'>NE<span style="color:red; font-weight: bold">X</span>CODE</a>
                             </div>
                         </div>
                     </div>
