--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,27 @@
 {% block title %} Home {% endblock %}
 {% block content %}
 
+    <style>
+        .image-square-container {
+            position: relative;
+            width: 100%;
+            padding-top: 100%; /* makes the div square */
+            overflow: hidden;
+            border-radius: 12px; /* optional, for soft corners */
+        }
+
+        .image-square-container img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* fills and crops without stretching */
+            object-position: center;
+        }
+
+    </style>
+
     {% include 'inc/hero.html' %}
 
     <section class="layout-pt-md layout-pb-md bg-light-2">
@@ -60,7 +81,9 @@
                                         <div class="cardImage-slider rounded-4 overflow-hidden js-cardImage-slider">
                                             <div class="swiper-wrapper">
                                                 <div class="swiper-slide">
-                                                    <img class="col-12" src="{{ room.image.url }}" alt="{{ room.name }}">
+                                                    <div class="image-square-container">
+                                                        <img src="{{ room.image.url }}" alt="{{ room.name }}">
+                                                    </div>
                                                 </div>
 
                                                 {% for image in room.images.all %}
@@ -186,7 +209,9 @@
 
                                                 {% for image in room.images.all %}
                                                     <div class="swiper-slide">
-                                                        <img class="col-12" src="{{ image.image.url }}" alt="{{ room.name }}">
+                                                        <div class="image-square-container">
+                                                            <img src="{{ image.image.url }}" alt="{{ room.name }}">
+                                                        </div>
                                                     </div>
                                                 {% endfor %}
                                             </div>
